--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "axios": "^1.13.5",
     "bootstrap": "^5.3.8",
+    "husky": "^9.1.7",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
